--- a/module4/Tutorial_2_SSMs_Kalman.ipynb
+++ b/module4/Tutorial_2_SSMs_Kalman.ipynb
@@ -502,13 +502,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\n",
+    "\\begin{bmatrix}\n",
+    "   z_{t-1} \\\\\n",
+    "   y_{t-1} \\\\\n",
+    " \\end{bmatrix}\n",
+    " $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\n",
+    "\\begin{bmatrix}\n",
+    "   z_{t} \\\\\n",
+    "   y_{t} \\\\\n",
+    " \\end{bmatrix}\n",
+    "$"
+   ]
   }
  ],
  "metadata": {
