--- a/module4/miniprojects/MCTS.ipynb
+++ b/module4/miniprojects/MCTS.ipynb
@@ -33,8 +33,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -43,7 +45,18 @@
     "from graph import *\n",
     "import random\n",
     "import utils\n",
-    "\n",
+    "from plot_util import *\n",
+    "wd = windy_cliff_grid_2() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "class MazeAction(object):\n",
     "    def __init__(self, move):\n",
     "        self.move = np.asarray(move)\n",
@@ -51,7 +64,6 @@
     "    def __eq__(self, other):\n",
     "        return self.move == other.move\n",
     "        \n",
-    "   \n",
     "class MazeState(object):\n",
     "    def __init__(self, pos):\n",
     "        self.pos = np.asarray(pos)\n",
@@ -62,32 +74,22 @@
     "    \n",
     "    def perform(self, action):\n",
     "        pos,r = wd.get_outcome(self.pos,action.move)\n",
-    "        \n",
     "        return MazeState(pos)\n",
     "        \n",
     "    def reward(self, parent, action):\n",
     "         if self.pos in [53,131]:\n",
-    "             \n",
-    "             return 10000\n",
+    "            return 10000\n",
     "         elif self.pos in [2,3,4,28,42,56,70]:\n",
-    "             \n",
     "            return -10000\n",
     "         elif self.pos in rstates[len(rstates)-5:]:#== parent.pos:\n",
-    "             \n",
-    "             return -200\n",
+    "            return -200\n",
     "         return -10\n",
-    "         \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "    def is_terminal(self):\n",
-    "        if (self.pos in [2,3,4, 53,131,28,42,56,70]):\n",
     "           \n",
+    "    def is_terminal(self):\n",
+    "        if (self.pos in [2,3,4, 53,131,28,42,56,70]):   \n",
     "            return True\n",
     "        else:\n",
-    "            return False\n",
-    "             \n",
-    "   "
+    "            return False"
    ]
   },
   {
@@ -136,12 +138,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def default_policy(node):\n",
+    "    reward = 0\n",
+    "    pos, r = wd.get_outcome(node.state.pos, np.random.choice(node.state.actions).move)\n",
+    "    while pos is not None:\n",
+    "        mov = np.random.choice(MazeState(pos).actions).move\n",
+    "        pos, r = wd.get_outcome(pos, mov)\n",
+    "        reward += r\n",
+    "    return reward\n",
+    "\n",
+    "def backup(node):\n",
+    "    while node.parent is not None:\n",
+    "        node.parent.q += node.q\n",
+    "        node = node.parent \n",
+    "\n",
+    "def best_child(state_node, tree_policy):\n",
+    "    reward_max = -1e10\n",
+    "    for action_node in state_node.child:\n",
+    "        for next_state_node in action_node:\n",
+    "            if next_state_node.reward > reward_max:\n",
+    "                successor_node, reward_max = next_state_node, next_state_node.reward\n",
+    "    return successor_node\n",
+    "\n",
+    "def expand(state_node):\n",
+    "    action = np.random.choice(state_node.untried_actions)\n",
+    "    action_node = ActionNode(state_node, action)\n",
+    "    return action_node.sample_state()\n",
+    "    \n",
+    "def get_next_node(state_node, tree_policy):\n",
+    "    while not state_node.state.is_terminal():\n",
+    "        if len(state_node.untried_actions) > 0:\n",
+    "            state_node = expand(state_node)\n",
+    "            return state_node\n",
+    "        else:\n",
+    "            state_node = best_child(state_node, tree_policy)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -152,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -167,16 +204,15 @@
     "\n",
     "    def __call__(self, root, n=500):\n",
     "       \n",
-    "        depth=0\n",
     "        if root.parent is not None:\n",
     "            raise ValueError(\"Root's parent must be None.\")\n",
     "\n",
     "        for _ in range(n):\n",
     "            node = get_next_node(root, self.tree_policy)\n",
-    "            node.reward = self.default_policy(node)\n",
-    "            self.backup(node,depth)\n",
+    "            node.q = self.default_policy(node)\n",
+    "            self.backup(node)\n",
     "\n",
-    "        return utils.rand_max(root.children.values(), key=lambda x: x.q).action\n"
+    "        return utils.rand_max(root.children.values(), key=lambda x: x.q).action"
    ]
   },
   {
@@ -193,6 +229,45 @@
     "to make a real move in the windy cliff world:\n",
     "wd=windy_cliff_grid_2()\n",
     "new_state,rreward=wd.get_outcome(root.state.pos,best_action.move)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def pos2action(pos):\n",
+    "    root = StateNode(None, MazeState(pos))\n",
+    "    m = MCTS(None, default_policy, backup)\n",
+    "    a = m(root)\n",
+    "    return int(a.move)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "states = range(168)\n",
+    "actions = [pos2action(s) for s in states]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "action_matrix = np.zeros((len(states), 4))\n",
+    "for (i, a) in enumerate(actions):\n",
+    "    action_matrix[i, a] = 1\n",
+    "plot_quiver_max_action(wd, action_matrix)"
    ]
   },
   {
